--- a/OpenDoor/app/src/main/AndroidManifest.xml
+++ b/OpenDoor/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="edu.uw.lucashc.gesturedetector"
+<manifest package="edu.uw.opendoor"
     xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:allowBackup="true"
@@ -18,6 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".PlaySound" />
     </application>
 
 </manifest>
